# portia-ads

./: .gitignore  README.md  app_api.py  devenv.nix  pyproject.toml  test_api.sh
agents/: content_plans.py  podcast_plans.py  publishing_plans.py  research_plans.py  video_plans.py
app/agents/: content_plans.py  podcast_plans.py  publishing_plans.py  research_plans.py  video_plans.py
app/core/: portia_client.py
app/custom_tools/: file_creator.py  registry.py
app/schema/: __init__.py  content_schemas.py
app/tests/: content_test.py  podcast_audio_test.py  podcast_test.py  publishing_test.py  video_test.py
backend/: app.py  app_api.py
backend/app/agents/: podcast_plans.py  research_plans.py
backend/app/custom_tools/: file_creator.py  registry.py
backend/app/tests/: podcast_test.py  publishing_test.py  research_test.py  run_all_tests.py  video_test.py
backend/research_reports/: AI in Healtcare_summary.txt
content_plans/: master_content_plan  master_content_plan.json
core/: portia_client.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ResearchConfigForm.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Dashboard.tsx  Index.tsx
podcast_episodes/: episode_001_package.json
research_reports/: AI_in_Healthcare_market_research.json  AI_in_Healthcare_summary.txt  libaries from scratch_summary.txt
schema/: content_schemas.py
tests/: research_test.py
